--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
   <style lang="en" type="text/css" id="dark-mode-native-style"></style>
   <style lang="en" type="text/css" id="dark-mode-native-sheet"></style>
   <head>
+    <!-- Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-37LKQSJJ54"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-37LKQSJJ54");
+    </script>
+    <!-- End Google Analytics -->
+
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
